--- a/form-modules/src/styles/components/_index.scss
+++ b/form-modules/src/styles/components/_index.scss
@@ -2,7 +2,7 @@
 // COMPONENTS INDEX - Forward all component modules
 // =================================================================
 
-@forward 'buttons';
-@forward 'forms';
-@forward 'fields';
-@forward 'validation';
+@forward "buttons";
+@forward "forms";
+@forward "fields";
+@forward "validation";
