--- a/form-modules/src/styles/themes/_index.scss
+++ b/form-modules/src/styles/themes/_index.scss
@@ -2,4 +2,4 @@
 // THEMES INDEX - Forward all theme modules
 // =================================================================
 
-@forward 'default';
+@forward "default";
