--- a/form-modules/src/styles/layout/_index.scss
+++ b/form-modules/src/styles/layout/_index.scss
@@ -2,6 +2,6 @@
 // LAYOUT INDEX - Forward all layout modules
 // =================================================================
 
-@forward 'containers';
-@forward 'grid';
-@forward 'page';
+@forward "containers";
+@forward "grid";
+@forward "page";
