--- a/form-modules/src/styles/utilities/_index.scss
+++ b/form-modules/src/styles/utilities/_index.scss
@@ -2,5 +2,5 @@
 // UTILITIES INDEX - Forward all utility modules
 // =================================================================
 
-@forward 'spacing';
-@forward 'display';
+@forward "spacing";
+@forward "display";
