--- a/form-modules/src/styles/modules/_layout.scss
+++ b/form-modules/src/styles/modules/_layout.scss
@@ -36,7 +36,7 @@
 
 // Filas para campos lado a lado - utilizado en HTML
 .field-group {
-  @apply flex gap-4 w-full;
+  @apply flex gap-0 w-full sm:flex-row sm:gap-4 flex-col;
 }
 
 // Clases específicas para campos con prefijo - utilizadas por JS
